[package]
name = "cosmic-settings-network-manager-subscription"
version = "1.0.0-beta6"
edition = "2024"
license = "MPL-2.0"
rust-version.workspace = true
publish = true

[dependencies]
cosmic-dbus-networkmanager = { git = "https://github.com/pop-os/dbus-settings-bindings" }
secret-service = { version = "5.1.0", features = ["rt-tokio-crypto-rust"] }
nm-secret-agent-manager = { git = "https://github.com/pop-os/dbus-settings-bindings" }
futures = "0.3.31"
iced_futures = { git = "https://github.com/pop-os/libcosmic" }
itertools = "0.14.0"
secure-string = "0.3.0"
thiserror = "2.0.17"
tokio = "1.48.0"
tracing = "0.1.41"
zbus = { version = "5.12.0", features = ["tokio"] }
bitflags = "2.10.0"
