[package]
name = "cosmic-settings-pulse-subscription"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[dependencies]
libpulse-binding = { version = "2.30.1" }
rustix = { version = "1.1.3", features = ["pipe"] }
iced_futures = { git = "https://github.com/pop-os/libcosmic" }
futures = "0.3.32"
log = "0.4.27"

[patch.'https://github.com/pop-os/libcosmic']
iced_futures = { git = "https://github.com/pop-os/libcosmic//", branch = "iced-rebase" }
