[package]
name = "cosmic-settings-daemon-subscription"
version = "1.0.2"
edition = "2024"
rust-version.workspace = true
publish = true

[dependencies]
futures = "0.3.31"
iced_futures = { git = "https://github.com/pop-os/libcosmic" }
log = "0.4.29"
tokio = "1.49.0"
tokio-stream = "0.1.18"
zbus = "5.12.0"
