[package]
name = "cosmic-settings-daemon-subscription"
version = "1.0.7"
edition = "2024"
rust-version.workspace = true
publish = true

[dependencies]
futures = "0.3.33"
iced_futures = { git = "https://github.com/pop-os/libcosmic" }
log = "0.4.33"
tokio = "1.53.1"
tokio-stream = "0.1.19"
zbus = "5.18.0"
