[package]
name = "cosmic-settings-upower-subscription"
version = "1.0.0-beta6"
edition = "2024"
license = "MPL-2.0"
rust-version.workspace = true
publish = true

[dependencies]
futures = "0.3.31"
iced_futures = { git = "https://github.com/pop-os/libcosmic" }
log = "0.4.28"
tokio = "1.48.0"
tokio-stream = "0.1.17"
upower_dbus = { git = "https://github.com/pop-os/dbus-settings-bindings" }
zbus = "5.12.0"
